--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -42,12 +42,12 @@
 						</div>
 						<div class=" row d-flex new-former">
 							<div class="col-1"></div>
-							<div class="col-4 new-owner  very-center curs-pointer" onclick="dispNewOwn()">
+							<div class="col-4 new-owner d-flex very-center curs-pointer" onclick="dispNewOwn()">
 								Nouveau propriétaire
 							</div>
 							<div class="col-2"></div>
 
-							<div class="col-4 former-owner  very-center curs-pointer" onclick="SelectOwners()">
+							<div class="col-4 former-owner d-flex very-center curs-pointer" onclick="CreateSelectOwners()">
 								Ancien propriétaire
 							</div>
 							<div class="col-1"></div>
@@ -63,7 +63,7 @@
 							<div class="col-4 text-center">{{form.phone.label}}<br/> {{form.phone}}</div>
 							<div class="col-4 mb-2 text-center">{{form.mail.label}}<br/> {{form.mail}}</div>
 							<div class="col-3 mt-4 text-center ">
-								<button class="curs-pointer bg-refresh" onclick="Refresh()">retour</button>
+								<button class="curs-pointer bg-refresh" onclick="CleanOwnerInput(event)">retour</button>
 							</div>		
 						</div>
 					</div>			
@@ -88,189 +88,110 @@
 			</div>
 		</form>
 	</article>
-	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-	<script type="text/javascript">
-		/* *** plan ***
-		1/ User select new or former owner
-		2/ 	A. new displays Ownerform
-		2/ 	B. former displays select with owner in option
-		3/ Client sends Ajax request to get more infos about selected owner id
-		4/ Client receives info, success > display ownerform and fill it
-		*/
+</section>
+{% load static %}
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script type="text/javascript" src='{% static "sheet/js/utils.js" %}'> </script>
+<script type="text/javascript">
+	/* *** plan ***
+	1/ User select new or former owner
+	2/ 	A. new displays Ownerform
+	2/ 	B. former displays select with owner in option
+	3/ Client sends Ajax request to get more infos about selected owner id
+	4/ Client receives info, success > display ownerform and fill it
+	*/
 
+	let is_neutered_button = document.getElementById("id_is_neutered_0")
+	is_neutered_button.checked = true
+	let species0_button = document.getElementById('id_species_0')
+	species0_button.checked = true
+	let owner_sex_button = document.getElementById("id_owner_sex_0")
+	owner_sex_button.checked = true
+	let divNF = document.getElementsByClassName("new-former")[0]
+	let ownDivs = document.getElementsByClassName('owner_input') //div for input owner
+	let divFormer = document.getElementsByClassName("former-owner")[0] //div for button Ancien Propériétaire
+	let divNew = document.getElementsByClassName("new-owner")[0] //div for button Nouveau Propériétaire
 
+	//*** auto fill with today date 
+	const today = function(elem) {
+		let today = new Date();
+		let month = today.getMonth()+1
+		if (month <= 9) {
+			month = '0' + String(month)}
+		let date = today.getDate()+'/'+month+'/'+today.getFullYear();
+		let input = elem.nextElementSibling.nextElementSibling
+		input.value = date
+	}
 
-		let is_neutered_button = document.getElementById("id_is_neutered_0")
-		is_neutered_button.checked = true
-		let species0_button = document.getElementById('id_species_0')
-		species0_button.checked = true
-		let owner_sex_button = document.getElementById("id_owner_sex_0")
-		owner_sex_button.checked = true
-		let csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-		
-		const Refresh = function(){
-			window.location.href = window.location.href; 
-		}
-		//*** auto fill with today date 
-		const today = function(elem) {
-			let today = new Date();
-			let month = today.getMonth()+1
-			if (month <= 9) {
-				month = '0' + String(month)}
-			let date = today.getDate()+'/'+month+'/'+today.getFullYear();
-			let input = elem.nextElementSibling.nextElementSibling
-			input.value = date
-		}
-		// Owner form
-		const dispNewOwn = function(){
-			divNF = document.getElementsByClassName("new-former")[0]
-			divNF.classList.replace("d-flex", "d-none")
-			ownDivs = document.getElementsByClassName('owner_input')
-			for (div of ownDivs){
-				div.classList.replace("d-none", "d-flex")
-			}
-			removeFromOwnerBlank()
-		}
-		// remove data from owner Form
-		const removeFromOwnerBlank = function(value){
-			ids = ["id_owner_name", "id_owner_surname", "id_owner_sex", 'id_phone', "id_mail"]
-			for (index in ids){
-				input = document.getElementById(ids[index])
-				input.value = ""
-			}
-		}
-		// fill blank with ajax values
-		const fillBlank = function(value){
-			ids = ["id_owner_name", "id_owner_surname", 'id_phone', "id_mail"]
-			values = [value.name, value.surname, value.phone, value.mail]
-			for (index in ids){
-				input = document.getElementById(ids[index])
-				input.value = values[index]
-			}
-			let inputSex = document.getElementById('id_owner_sex').children;
-			console.log(inputSex, value.sex)
-			if (value.sex == 0){
-				inputSex[0].firstChild.firstChild.checked = true
-			}else{
-				inputSex[1].firstChild.firstChild.checked = true
-			}
+	//create an input date for the future date of neuter
+	const appearNewInput = function(){
+		let divDate = document.createElement("div");
+		divDate.innerHTML = '{{form.futur_date_of_neuter.label}}{{form.futur_date_of_neuter}}'
+		divDate.classList.add("d-none")
+		divDate.id = "divDate"
+		document.getElementById('inputDateZone').appendChild(divDate);
 
+	}
+	const CreateSelectOwners = function(){
+		owners = []
+		{% for owner in owners%}
+			owners.push({
+				'name' : '{{owner}}', 'id' : '{{owner.id}}'
+			})
+		{% endfor%}
+		const whatToDo = function(data){
+			dispNewOwn()
+    		fillBlank(data)
 		}
-		// displays owner form with data from ajax request 
-		const displayOwnerForm = function(value){
-			// this functions fills the inputs with the given data from animal
-			//AJAX
-			const csrfSafeMethod = function(method) {
-            	// these HTTP methods do not require CSRF protection
-            	return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        	}
-			$.ajaxSetup({
-                beforeSend: function (xhr, settings) {
-                    // if not safe, set csrftoken
-                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                    }
-                }
-            }); 
-            $.ajax({ 
-                type:"POST", 
-                url: "{% url 'sheet:add'%}", 
-                dataType: 'json',
-                data: {'ask_owner_data':"1", 'owner_id':value},
-                success: function (res) {
-                    // console.log('voici ta réponse : ')
-                    // console.log(res.data.name)
-                    // console.log(res.data.surname)
-                    // console.log(res.data.sex)
-                    // console.log(res.data.phone)
-                    // console.log(res.data.mail)
-                    dispNewOwn()
-                    fillBlank(res.data)
-                    // fillBlank(res.data)
-                    
-                },
-                error: function (res) {
-                    alert("erreur lors de l'envoie de données");
-                    console.log(res.status);
-                    console.log(res.error);
-                }
-            })			
-		}
-		// creates and displays select with owners name and validate button
-		const SelectOwners = function(){
-			divNF = document.getElementsByClassName("new-former")[0]
-			divFormer = document.getElementsByClassName("former-owner")[0]
-			divNew = document.getElementsByClassName("new-owner")[0]
-			divFormer.classList.add("d-none")
-			divNew.classList.add("d-none")
-			select = document.createElement('select')
-			select.id = "id_select"
-			select.name = "former_owner"
-			divNF.appendChild(select)
-			
-			{% for owner in owners%}
-				option = document.createElement('option')
-				option.value = '{{owner.id}}'
-				option.innerHTML = "{{owner}}"
-				select.appendChild(option)
-			{% endfor %}
-			buttValidate = document.createElement('button')
-			buttValidate.onclick = function(){displayOwnerForm(select.value)}
-			buttValidate.innerHTML = "valider"
-			divNF.appendChild(buttValidate)
-		}
-
-		//create an input date for the future date of neuter
-		const appearNewInput = function(){
-			let divDate = document.createElement("div");
-			divDate.innerHTML = '{{form.futur_date_of_neuter.label}}{{form.futur_date_of_neuter}}'
-			divDate.classList.add("d-none")
-			divDate.id = "divDate"
-			document.getElementById('inputDateZone').appendChild(divDate);
-
-		}
-		
-		document.getElementById("id_is_neutered").addEventListener('click', function(e){
-			if(document.getElementById('id_is_neutered_2').checked){
-				document.getElementById('divDate').classList.replace('d-none', "d-flex")
-			}else{
-				document.getElementById('divDate').classList.replace('d-flex', "d-none")
-			}
-		})
+		SelectOwners(owners, '{% url "sheet:add"%}', whatToDo)
+	}
+	const GiveValueReminder = function(){
 		document.getElementById("id_mail_reminder").value = 0
 		document.getElementById("id_tel_reminder").value = 0
-		appearNewInput()
-
-		const getInputDate = function(){
-			const allInput = document.getElementsByTagName('input')
-			let allInputDate = []
-			for (input of allInput){
-				if (input.id.substring(0,7) == "id_date"){
-					allInputDate.push(input)
-				}else if (dateField.id == "id_date_of_neuter" && dateField.value == ''){
-					console.log('pas de date de stérilisation')
-				}
+	}
+	const getInputDate = function(){
+		const allInput = document.getElementsByTagName('input')
+		let allInputDate = []
+		for (input of allInput){
+			if (input.id.substring(0,7) == "id_date"){
+				allInputDate.push(input)
+			}else if (input.id == "id_date_of_neuter" && input.value == ''){
+				console.log('pas de date de stérilisation')
 			}
-			console.log(allInputDate)
-			return allInputDate
 		}
-		document.getElementById('submit').addEventListener('click', function(event){
-			const dateFields = getInputDate()
-			const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
+		console.log(allInputDate)
+		return allInputDate
+	}
+	//*** event 
+	document.getElementById("id_is_neutered").addEventListener('click', function(e){
+		if(document.getElementById('id_is_neutered_2').checked){
+			document.getElementById('divDate').classList.replace('d-none', "d-flex")
+		}else{
+			document.getElementById('divDate').classList.replace('d-flex', "d-none")
+		}
+	})
+	appearNewInput()
+	document.getElementById('submit').addEventListener('click', function(event){
+		const dateFields = getInputDate()
+		const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
+		for (dateField of dateFields){
+	        if (regex_date.test(dateField.value)){
+	            dateField.style.color = "black";
+	        } else{
+	            verifText = dateField.value + " n'est pas une date au format jj/mm/aaa"
+	            verif.textContent = verifText ;
+	            dateField.style.border = "2px red solid";
+	            dateField.style.color = "red";
 
-			for (dateField of dateFields){
-		        if (regex_date.test(dateField.value)){
-		            dateField.style.color = "black";
-		        } else{
-		            verifText = dateField.value + " n'est pas une date au format jj/mm/aaa"
-		            verif.textContent = verifText ;
-		            dateField.style.border = "2px red solid";
-		            dateField.style.color = "red";
+	            event.preventDefault();
+	            return
+	        }
+		}})
 
-		            event.preventDefault();
-		            return
-		        }
-			}})
-	</script>
-	{% endblock  %}
+	const main = function(){
+		GiveValueReminder()
+	}
+	main()
+</script>
+{% endblock  %}
 
